--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.15",
+    "framer-motion": "^10.18.0",
     "framer-motion": "^10.16.1",
     "init-middleware": "^0.0.1",
     "next": "^14.2.4",
@@ -25,6 +26,7 @@
     "react": "^18.3.1",
     "react-animated-numbers": "^0.16.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-type-animation": "^3.1.0",
     "resend": "^1.0.0",
     "tailwindcss": "3.3.3",
